# httpserv

./: Cargo.toml  README.md  index.html
src/: cfg.rs  http.rs  index.html  lib.rs  main.rs
tests/: basic_test.rs  integration.rs
