[package]
name = "httpserv"
version = "1.0.3"
authors = ["Nic Hartley <nic@cybers.eco>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
description = "A tiny, zero-dependency fileserver for local HTML development."
repository = "https://github.com/nic-hartley/httpserv"

[dependencies]
